[package]
name = "rust-dsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256 = "1.1.1"
num = { version = "0.4.0", features = ["rand"] }
clap = { version = "4.0.18", features = ["unstable-doc"] }
rand = "0.8.5"
